<resources>
    <string name="app_name">Q-Cube</string>
    <string name="textview">TextView</string>
    <string name="Q">Q-</string>
    <string name="search">Search</string>
    <string name="cube">CUBE</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="popular">Popular</string>
    <string name="recommended">Recommended</string>
    <string name="all_menu">AllMenu</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
</resources>