<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/all_menu_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/all_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/popularfood2" />

    <TextView
        android:id="@+id/all_menu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/all_menu_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/all_menu_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/price"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/all_menu_image"
        app:layout_constraintTop_toBottomOf="@+id/all_menu_name" />

</androidx.constraintlayout.widget.ConstraintLayout>